tetrate/tis1102/e2e/bad-resouces.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-bad-virtualservice
  namespace: default
spec:
  hosts:
  - "bad.example.com"
  gateways:
  - "non-existent-gateway"
  http:
  - route:
    - destination:
        host: "my-service.default.svc.cluster.local"
